--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,9 @@
 {
   "name": "mini_bower",
   "description": "Creating my own bower package",
-  "main": "dist/mini_bower.js",
+  "main": [
+    "dist/mini_bower.js"
+  ],
   "authors": [
     "Dalby Modo <dalbymodo@hotmail.se>"
   ],
