adding a version number to bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "mini_bower",
+  "version": "1.0.1",
   "description": "Creating my own bower package",
   "main": [
     "dist/mini_bower.js"
